<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherAppFinal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Enter zip code</string>
    <string name="search_button_text">Get Weather</string>
    <string name="tempc_label">Temp(C°):</string>
    <string name="tempf_label">Temp(F°):</string>
    <string name="description_label">Current Condition:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="wind_speed_label">Wind Speed(MPH):</string>
    <string name="wind_direction_label">Wind Direction:</string>
    <string name="description_image">Description Image</string>

</resources>
