<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchField"
            style="@style/InputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/search_button_text" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/weatherData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:columnCount="2"
        android:padding="10dip" >

        <TextView
            style="@style/WeatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/description_label" />

        <ImageView
            android:id="@+id/data_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/description_image" />

        <TextView
            style="@style/WeatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tempf_label" />

        <TextView
            android:id="@+id/data_tempF"
            style="@style/WeatherResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            style="@style/WeatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tempc_label" />

        <TextView
            android:id="@+id/data_tempC"
            style="@style/WeatherResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            style="@style/WeatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/humidity_label" />

        <TextView
            android:id="@+id/data_humidity"
            style="@style/WeatherResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            style="@style/WeatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/wind_speed_label" />

        <TextView
            android:id="@+id/data_windSpeed"
            style="@style/WeatherResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            style="@style/WeatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/wind_direction_label" />

        <TextView
            android:id="@+id/data_windDirection"
            style="@style/WeatherResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />
    </GridLayout>

</LinearLayout>